# adis-16505-pico-usb

./: Readme.md
imu/csv_logger/: Cargo.toml
imu/csv_logger/src/: main.rs
imu/lib/adis/: Cargo.toml
imu/lib/adis/src/: burstmem.rs  diagstat.rs  lib.rs  memorymap.rs  msc_ctrl.rs  version.rs
imu/lib/driver/: Cargo.toml
imu/lib/driver/src/: lib.rs
imu/lib/protocol/: Cargo.toml
imu/lib/protocol/src/: cfg.rs  lib.rs
imu/pico/: .gitignore  Cargo.toml  Readme.md
imu/pico/.cargo/: config.toml
imu/pico/src/: config.rs  main.rs
imu/print_logger/: Cargo.toml
imu/print_logger/src/: args.rs  main.rs
workspace/: .gitignore  configure.sh
workspace/src/: .gitignore
workspace/src/imu/: Cargo.toml  package.xml
workspace/src/imu/src/: args.rs  main.rs
